--- a/Altas/style.css
+++ b/Altas/style.css
@@ -4,19 +4,17 @@
     box-sizing: border-box;
 }
 
-h3{
-    font-family: cursive;
-    font-size: 18pt;
-    letter-spacing: 1px;
-    width: 100%;
-    background-color: dodgerblue;
-    padding: 15px;
-    color: firebrick;
+h4 {
+    
+    
     text-align: center;
-    text-transform: uppercase;
+    
 }
+
+
+
 #container{
-    background-color: brown;
+    background-color: white;
     width: 100%;
     height: 100vh;
     display: -webkit-flex;
@@ -29,7 +27,7 @@ h3{
 }
 
 #container form{
-    background-color: coral;
+    background-color: white;
     width: 400px;
     padding: 10px;
 }
@@ -42,24 +40,41 @@ h3{
 #container form input{
     width: 90%;
     padding: 5px;
-    font-size: 16pt;
+    font-size: 10pt;
     display: block;
     margin: 25px auto;
     border-radius: 5px;
-    border: 1px solid #85929e;
-    text-align: center;
+    border: 1px solid #8B6415;
+    color: #8B6415;
+   
 }
 
 #container form input[type="submit"]{
-    background-color: darkslateblue;
+    background-color: #8B6415;
     padding: 10px;
-    color: chartreuse;
+    color: white;
     letter-spacing: 1px;
     border: 0;
     cursor: pointer;
+    
 }
 .alert{
-    font-family: fantasy;
+    font-family: cursive;
     font-size: 16px;
     text-align: center;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
