--- a/assets/styles.css
+++ b/assets/styles.css
@@ -7,7 +7,7 @@
 	outline: none;
 }
 body {
-	background-image: url(images/bluepurple.jpg);
+	background-image: url("https://mdn.mozillademos.org/files/6457/mdn_logo_only_color.png");
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
