--- a/Altas/style.css
+++ b/Altas/style.css
@@ -1,4 +1,3 @@
-
 *{
     margin: 0;
     padding: 0;
@@ -13,36 +12,46 @@ h4 {
     
 }
 
-
-
-#container{
-        background-image: url(assets/img/QUINTONIL.png);
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    width: 100%;
-    height: 100vh;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: -ms-flex;
-    display: -o-flex;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.login-form {
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 100px;
+    margin-bottom: 100px;
+    max-width: 460px;
+    
 }
-#container form{
-    background-color: white;
+    .login-form > section {
+        padding: 35px 35px 25px 35px;
+        border-radius: 5px;
+    }
+    .login-form a {
+        color: #fff;
+    }
+    .login-form img {
+        display: block;
+        margin: 0 auto;
+        margin-bottom: 55px;
+    }
+
+
+.login-form  form{
+    background-color: transparent;
     width: 400px;
     padding: 10px;
+     width: 100%;
+    height: 100vh;
+    
+    display: block;
+      justify-content: center;
+    align-items: center;
 }
-#container form img{
+  .login-form form img{
     margin: 15px auto;
     text-align: center;
     display: block;
     height: auto;
 }
-#container form input{
+.login-form form input{
     width: 90%;
     padding: 5px;
     font-size: 10pt;
@@ -54,7 +63,7 @@ h4 {
    
 }
 
-#container form input[type="submit"]{
+ .login-form form input[type="submit"]{
     background-color: #8B6415;
     padding: 10px;
     color: white;
@@ -69,25 +78,4 @@ h4 {
     text-align: center;
     color: grey;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
